--- a/manual/docs/04-cli/042-apis-to-business-website/01-create-your-first-project.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/01-create-your-first-project.mdx
@@ -1,7 +1,7 @@
 import HomeAPIs from '@site/static/img/home-apis.png';
 import Welcome from '@site/static/img/welcome.png';
 
-# 1 - Create your first project
+# Create your first project
 
 # Run Daikoku CLI in dev mode
 
