--- a/manual/docs/04-cli/042-apis-to-business-website/02-edit-your-home-page.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/02-edit-your-home-page.mdx
@@ -1,4 +1,4 @@
-# 2 - Edit your home page
+# Edit your home page
 
 In your code editor, navigate in the Explorer file pane to `src/pages/page.html` and click on it to open the file’s contents in an editable tab.
 
