--- a/manual/docs/04-cli/042-apis-to-business-website/03-deploy-your-website copy.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/03-deploy-your-website copy.mdx
@@ -1,4 +1,4 @@
-# 3 - Deploy your site
+# Deploy your site
 
 To synchronize your site with your Daikoku, you can push your changes by running the command:
 
