--- a/manual/docs/04-cli/042-apis-to-business-website/05-add-dynamic-content.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/05-add-dynamic-content.mdx
@@ -1,6 +1,6 @@
 import APIImage from '@site/static/img/api.png';
 
-# 5 - Add dynamic content
+# Add dynamic content
 
 # Use your first directive
 
