--- a/manual/docs/04-cli/042-apis-to-business-website/06-style-your-apis-page.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/06-style-your-apis-page.mdx
@@ -1,6 +1,6 @@
 import APIStyling from '@site/static/img/apis-styling.png';
 
-# 6 - Style your APIs page
+# Style your APIs page
 
 # Style an individual page
 
