--- a/manual/docs/04-cli/042-apis-to-business-website/07-build-your-first-layout.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/07-build-your-first-layout.mdx
@@ -1,4 +1,4 @@
-# 7 - Build your first layout
+# Build your first layout
 
 You still have some links and components repeatedly rendered on every page. It’s time to refactor again to create a shared page layout!
 
