--- a/manual/docs/04-cli/042-apis-to-business-website/08-define-and-use-a-variable.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/08-define-and-use-a-variable.mdx
@@ -1,4 +1,4 @@
-# 8 - Define and use a variable
+# Define and use a variable
 
 Any HTML file is valid Daikoku language. But, you can do more with Daikoku than just regular HTML!
 
