--- a/manual/docs/04-cli/042-apis-to-business-website/09-create-react-component.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/09-create-react-component.mdx
@@ -1,4 +1,4 @@
-# 9 - Create react component
+# Create react component
 
 Now that you have added a layout to your APIs page, it's time to explore a different approach to creating files.
 
