--- a/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
@@ -1,4 +1,4 @@
-# 10 - Configure custom emails 
+# Configure custom emails 
 
 Your website and Daikoku are almost ready to be published, but before that, you need to configure the email content.
 
