--- a/manual/docs/04-cli/042-apis-to-business-website/11-dev-mode.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/11-dev-mode.mdx
@@ -1,6 +1,6 @@
 import DeveloperMode from '@site/static/img/developer-mode.png';
 
-# 11 - Developer mode
+# Developer mode
 
 In the first steps of this tutorial, we used the `watch` command to preview the project files as a website.
 
