--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1400,5 +1400,6 @@
   "subscription.copy.apikey.help": "Copier les identifiants sous la forme clientId:clientSecret",
   "subscription.copy.token.label": "Jeton",
   "subscription.copy.token.help": "Copier le jeton Daikoku, utilisable pour récupérer les identifiants par API",
-  "setting.panel.reset.confirm.message": "Êtes-vous sûr de vouloir réinitialiser les données de votre organisation ?"
+  "setting.panel.reset.confirm.message": "Êtes-vous sûr de vouloir réinitialiser les données de votre organisation ?",
+  "api.pricing.created.subscription.panel.title": "Votre clé d'API est prête"
 }
