use cms directives inside emails

--- a/manual/docs/04-cli/042-apis-to-business-website/04-create-your-first-page copy.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/04-create-your-first-page copy.mdx
@@ -39,8 +39,8 @@ To make it easier to preview all your pages, add HTML page navigation links befo
 `<h1>` at the top of both of your pages (page.html and about.html):
 
 ```html title="src/pages/about.html"
-<a href="/">Home</a>
-<a href="/about/">About</a>
+<a href="/_/">Home</a>
+<a href="/_/about/">About</a>
 
 <h1>About Me</h1>
 <h2>... and my new Daikoku site!</h2>
