--- a/manual/docs/04-cli/042-apis-to-business-website/06-style-your-apis-page.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/06-style-your-apis-page.mdx
@@ -15,7 +15,7 @@ _exact: true
 // addition
 <head>
   // addition
-    <link href="styles/api.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/api.css" rel="stylesheet" type="text/css" />
     // addition
 </head>
 
@@ -51,7 +51,7 @@ Writing a Daikoku template is very much like writing HTML, so you can use all HT
 
 <head>
   // deletion
-    <link href="styles/api.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/api.css" rel="stylesheet" type="text/css" />
     // addition
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
     // addition
