--- a/manual/docs/04-cli/042-apis-to-business-website/09-create-react-component.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/09-create-react-component.mdx
@@ -82,7 +82,7 @@ _exact: true
 
 ---
 //addition
-<script src="/components/api.jsx" type="text/babel"></script>
+<script src="./components/api.jsx" type="text/babel"></script>
 
 {{#daikoku-template-wrapper "/layouts/react-base.html" coucou="salut"}}
 <h1 class="text-5xl font-bold">My apis {{coucou}}</h1>
