--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1400,5 +1400,6 @@
     "subscription.copy.token.label": "token",
     "subscription.copy.token.help": "Copy daikoku token, used for retrieve credentials by API",
     "setting.panel.reset.confirm.message": "Are you sure you want to reset your organization's data?",
-    "api.pricing.created.subscription.panel.title": "Your API Key is Ready"
+    "api.pricing.created.subscription.panel.title": "Your API Key is Ready",
+    "api.pricing.subscription.custom.name.help":" You can give your key a name to make it easier to find (optional)."
 }
