--- a/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
+++ b/manual/docs/04-cli/042-apis-to-business-website/10-configure-custom-emails.mdx
@@ -34,54 +34,585 @@ Perform an action in Daikoku and check the changes in the received emails.
 
 # Update the email for a specific event
 
-Each Daikoku event triggers the generation of an email.
-You can find a folder for each event in `src/mails`, which contains two subfolders (fr and en), one for each language.
+Each Daikoku event triggers the generation of an email notification. For each event, you can find a corresponding folder in the src/mails directory.
 
-This is the complete list.
+## Folder Structure
+
+    Event-based folders: Each event email has its dedicated folder named after the event id (e.g., new-user, team-invitation, etc.).
+    Language-specific subfolders: Within each event folder, you will find two subfolders:
+        fr: Contains templates for emails in French.
+        en: Contains templates for emails in English.
+
+## What to Expect in Each Folder
+
+    Subject and body templates: Each subfolder includes localized email templates for the subject (title) and body (body).
+    Parameter documentation: Each email supports specific parameters to dynamically populate user-specific or event-specific information. The details for these parameters are listed in this document under each event.
+
+## Purpose of this List
+
+This document provides a comprehensive overview of all Daikoku email events, their descriptions, and the parameters required to customize them. This ensures consistency in email content and simplifies localization for multiple languages.
 
 <ul>
-    <li>mail-acceptation-title</li>
-    <li>mail-api-access-acceptation-body</li>
-    <li>mail-api-access-body</li>
-    <li>mail-api-access-rejection-body</li>
-    <li>mail-api-access-title</li>
-    <li>mail-api-subscription-acceptation-body</li>
-    <li>mail-api-subscription-rejection-body</li>
-    <li>mail-api-subscription-transfer-rejection-body</li>
-    <li>mail-api-transfer-ownership-acceptation-body</li>
-    <li>mail-api-transfer-ownership-rejection-body</li>
-    <li>mail-apikey-demand-body</li>
-    <li>mail-apikey-demand-title</li>
-    <li>mail-apikey-refresh-body</li>
-    <li>mail-apikey-refresh-title</li>
-    <li>mail-apikey-rotation-body</li>
-    <li>mail-apikey-rotation-title</li>
-    <li>mail-checkout-body</li>
-    <li>mail-checkout-title</li>
-    <li>mail-contact-contact</li>
-    <li>mail-contact-sender</li>
-    <li>mail-contact-title</li>
-    <li>mail-create-post-body</li>
-    <li>mail-create-post-title</li>
-    <li>mail-create-team-token-body</li>
-    <li>mail-create-team-token-title</li>
-    <li>mail-new-issue-body</li>
-    <li>mail-new-issue-title</li>
-    <li>mail-new-message-body</li>
-    <li>mail-new-message-title</li>
-    <li>mail-new-user-body</li>
-    <li>mail-new-user-title</li>
-    <li>mail-rejection-title</li>
-    <li>mail-subscription-validation-body</li>
-    <li>mail-subscription-validation-title</li>
-    <li>mail-team-access-acceptation-body</li>
-    <li>mail-team-access-body</li>
-    <li>mail-team-access-rejection-body</li>
-    <li>mail-team-access-title</li>
-    <li>mail-team-invitation-body</li>
-    <li>mail-team-invitation-title</li>
-    <li>mail-user-invitation-acceptation-body</li>
-    <li>mail-user-invitation-rejection-body</li>
+    <li>
+      <details>
+        <summary>
+          A <strong>API access demand</strong> has been <strong>accepted</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team admin who requested access to the API after this request has been accepted</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-acceptation-title</div>
+          <div><strong>Body</strong>: mail-api-access-acceptation-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription request</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>api_data</strong>: The API as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the request, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A <strong>API access demand</strong> has been <strong>rejected</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team admin who requested access to the API after this request has been rejected</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-rejection-title</div>
+          <div><strong>Body</strong>: mail-api-access-rejection-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription request</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>api_data</strong>: The API as a JSON object</li>
+          <li><strong>recipient_data</strong>: The recipient of the email as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the request, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, as a JSON object</li>
+          <li><strong>tenant_data</strong>: The tenant/organization as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          API <strong>access request</strong>
+        </summary>
+        <p>
+          <strong>This email is sent when a Daikoku user requests access to a team for an API with visibility set to <em>public with permission</em>.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-api-access-title</div>
+          <div><strong>Body</strong>: mail-api-access-body</div>
+        </p>
+        
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user requesting access</li>
+          <li><strong>apiName</strong>: The name of the subscribed API</li>
+          <li><strong>teamName</strong>: The name of the team requesting access</li>
+          <li><strong>link</strong>: The URL to the notifications page</li>
+          <li><strong>api_data</strong>: The API information as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team requesting access to the API, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team owning the API, as a JSON object</li>
+          <li><strong>user_data</strong>: The user requesting access to the API, as a JSON object</li>
+          <li><strong>notification_data</strong>: The notification information as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A <strong>subscription request</strong> has been <strong>accepted</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to team administrators who made a subscription request after the request has been accepted.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-acceptation-title</div>
+          <div><strong>Body</strong>: mail-api-subscription-acceptation-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription request</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>team</strong>: The name of the team that requested the subscription</li>
+          <li><strong>link</strong>: The URL to the created API key</li>
+
+          <li><strong>api_data</strong>: The API information as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The usage plan information as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the request, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, as a JSON object</li>
+          <li><strong>user_data</strong>: The user who created the request, as a JSON object</li>
+          <li><strong>subscription_data</strong>: The subscription information as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A <strong>subscription request</strong> has been <strong>rejected</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team administrator who made the subscription request after the request has been rejected.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-rejection-title</div>
+          <div><strong>Body</strong>: mail-api-subscription-rejection-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription request</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>teamName</strong>: The name of the team that requested the subscription</li>
+          <li><strong>message</strong>: The rejection message provided by the producer team</li>
+
+          <li><strong>api_data</strong>: The API information as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The usage plan information as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the request, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, as a JSON object</li>
+          <li><strong>user_data</strong>: The user who created the request, as a JSON object</li>
+          <li><strong>subscriptionDemand_data</strong>: The subscription demand information as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A user has rejected a <strong>transfer of ownership</strong> for an <strong>API</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to team administrators when a user rejects the request to transfer ownership of an API to another team.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-rejection-title</div>
+          <div><strong>Body</strong>: mail-api-transfer-ownership-rejection-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>apiName</strong>: The name of the API being transferred</li>
+          <li><strong>teamName</strong>: The name of the requested team</li>
+
+          <li><strong>producer_team_data</strong>: The team requesting the transfer, as a JSON object</li>
+          <li><strong>requested_team_data</strong>: The team that received the transfer request, as a JSON object</li>
+          <li><strong>api_data</strong>: The transferred API information as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A user has requested a <strong>subscription</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to team administrators when a user requests a new API key and requires validation by an API administrator.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-apikey-demand-title</div>
+          <div><strong>Body</strong>: mail-apikey-demand-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription request</li>
+          <li><strong>apiName</strong>: The name of the subscribed API</li>
+          <li><strong>team</strong>: The name of the team making the subscription request</li>
+          <li><strong>link</strong>: A link to the notifications page</li>
+
+          <li><strong>consumer_team_data</strong>: The team that owns the subscription, as a JSON object</li>
+          <li><strong>producer_user_data</strong>: The user or team that owns the API, as a JSON object</li>
+          <li><strong>api_data</strong>: The API information as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The usage plan details as a JSON object</li>
+          <li><strong>notification_data</strong>: The notification information as a JSON object</li>
+          <li><strong>user_data</strong>: The user's information as a JSON object</li>
+          <li><strong>recipient_data</strong>: The user receiving the email, as a JSON object</li>
+          <li><strong>subscriptionDemand_data</strong>: The subscription request as a JSON object</li>
+          <li><strong>tenant_data</strong>: The tenant information as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          API Subscription <strong>Secret Refresh</strong>
+        </summary>
+        <p>
+          <strong>This email is sent when an API key secret has been refreshed by an administrator.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-apikey-refresh-title</div>
+          <div><strong>Body</strong>: mail-apikey-refresh-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>apiName</strong>: The name of the subscribed API</li>
+          <li><strong>planName</strong>: The name of the subscribed usage plan</li>
+          <li><strong>api_data</strong>: The subscribed API details as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The subscribed usage plan details as a JSON object</li>
+          <li><strong>subscription_data</strong>: The subscription details as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team owning the subscription, as a JSON object</li>
+          <li><strong>tenant_data</strong>: The tenant details as a JSON object</li>
+          <li><strong>recipient_data</strong>: The user receiving the email, as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          API Subscription <strong>Secret Rotation</strong>
+        </summary>
+        <p>
+          <strong>This email is sent when an API key secret is pending rotation.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-apikey-rotation-title</div>
+          <div><strong>Body</strong>: mail-apikey-rotation-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>apiName</strong>: The name of the subscribed API</li>
+          <li><strong>planName</strong>: The name of the subscribed usage plan</li>
+          <li><strong>api_data</strong>: The subscribed API details as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The subscribed usage plan details as a JSON object</li>
+          <li><strong>subscription_data</strong>: The subscription details as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team owning the subscription, as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+
+    <li>
+      <details>
+        <summary>
+          A Subscription Demand Requires <strong>Checkout</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team that created a subscription demand when the demand is at the checkout stage.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-checkout-title</div>
+          <div><strong>Body</strong>: mail-checkout-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>api.name</strong>: The name of the API related to the subscription demand</li>
+          <li><strong>api.plan</strong>: The name of the usage plan associated with the subscription demand</li>
+          <li><strong>link</strong>: The redirect URL leading to the checkout page</li>
+          <li><strong>api_data</strong>: The API details as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The usage plan details as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the demand, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, as a JSON object</li>
+          <li><strong>user_data</strong>: The user who created the demand, as a JSON object</li>
+          <li><strong>subscriptionDemand_data</strong>: The subscription demand details as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A Team or Organization is <strong>Contacted</strong> by a User
+        </summary>
+        <p>
+          <strong>This email is sent to the entity (team or tenant/organization) contacted by a user using the dedicated contact form.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-contact-title</div>
+          <div><strong>Body</strong>: mail-contact-contact</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who sent the contact email</li>
+          <li><strong>email</strong>: The email address of the user</li>
+          <li><strong>subject</strong>: The subject line of the contact email</li>
+          <li><strong>body</strong>: The body content of the email</li>
+          
+          <li><strong>contact</strong>: The contacted team or organization as a JSON object</li>
+          <li><strong>user_data</strong>: The user who sent the email, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A User <strong>Contact</strong> with Team or Organization
+        </summary>
+        <p>
+          <strong>This email is sent to the user who contacted a team administrator via the dedicated contact form.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-contact-title</div>
+          <div><strong>Body</strong>: mail-contact-sender</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who sent the contact email</li>
+          <li><strong>email</strong>: The email address of the user</li>
+          <li><strong>subject</strong>: The subject of the contact email</li>
+          <li><strong>body</strong>: The body content of the email</li>
+          
+          <li><strong>contact</strong>: The contacted team or organization, represented as a JSON object</li>
+          <li><strong>user_data</strong>: The user who sent the email, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          API <strong>New Post</strong> Notification
+        </summary>
+        <p>
+          <strong>This email is sent to team administrators who are subscribed to an API, notifying them that an API administrator has created a new post.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-create-post-title</div>
+          <div><strong>Body</strong>: mail-create-post-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the post</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>teamName</strong>: The name of the team that owns the API</li>
+          <li><strong>link</strong>: The URL to the post page</li>
+          
+          <li><strong>api_data</strong>: The API, represented as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team consuming the API, represented as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team owning the API, represented as a JSON object</li>
+          <li><strong>user_data</strong>: The user who created the post, represented as a JSON object</li>
+          <li><strong>post_data</strong>: The post, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          <strong>New Team Creation</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team admin who just created a team, prompting them to validate the team's contact email address.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-create-team-token-title</div>
+          <div><strong>Body</strong>: mail-create-team-token-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the team</li>
+          <li><strong>teamName</strong>: The name of the newly created team</li>
+          <li><strong>link</strong>: The URL to validate the team's contact email</li>
+          <li><strong>team_data</strong>: The created team, represented as a JSON object</li>
+          <li><strong>recipient_data</strong>: The user who created the team, represented as a JSON object</li>
+          <li><strong>tenant_data</strong>: The tenant, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          API <strong>New Issue</strong> Posted
+        </summary>
+        <p>
+          <strong>This email is sent to API administrators when a user posts a new issue.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-new-issue-title</div>
+          <div><strong>Body</strong>: mail-new-issue-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who posted the issue</li>
+          <li><strong>apiName</strong>: The name of the API</li>
+          <li><strong>teamName</strong>: The name of the team that owns the API</li>
+          <li><strong>link</strong>: The URL to the issue page</li>
+          
+          <li><strong>api_data</strong>: The API as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team that owns the API, represented as a JSON object</li>
+          <li><strong>user_data</strong>: The user who posted the issue, represented as a JSON object</li>
+          <li><strong>issue_data</strong>: The issue, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          <strong>New Message</strong> Received
+        </summary>
+        <p>
+          <strong>This email is sent to tenant administrators when a user posts a new message.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-new-message-title</div>
+          <div><strong>Body</strong>: mail-new-message-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>body</strong>: The content of the message</li>
+          <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+          <li><strong>user_data</strong>: The user who posted the message, represented as a JSON object</li>
+          <li><strong>message_data</strong>: The message, represented as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          Finalize <strong>New Account</strong> Creation
+        </summary>
+        <p>
+          <strong>This email is sent to the user to finalize account creation and validate their email address.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-new-user-title</div>
+          <div><strong>Body</strong>: mail-new-user-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>tenant</strong>: The name of the tenant or organization</li>
+          <li><strong>link</strong>: The URL for validating the account</li>
+          <li><strong>tenant_data</strong>: The tenant or organization as a JSON object</li>
+          <li><strong>account_data</strong>: The information provided by the user for account creation, as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A subscription demand needs a <strong>validation</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the registered email address as part of the subscription demand validation process.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-subscription-validation-title</div>
+          <div><strong>Body</strong>: mail-subscription-validation-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who created the subscription demand</li>
+          <li><strong>team</strong>: The name of the team requesting the subscription</li>
+          <li><strong>body</strong>: The generated email body set up during the validation step</li>
+          <li><strong>urlAccept</strong>: The URL to accept the demand</li>
+          <li><strong>urlDecline</strong>: The URL to decline the demand</li>
+          <li><strong>api_data</strong>: The API as a JSON object</li>
+          <li><strong>usagePlan_data</strong>: The usage plan as a JSON object</li>
+          <li><strong>consumer_team_data</strong>: The team that created the demand, as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team owning the API, as a JSON object</li>
+          <li><strong>user_data</strong>: The user who created the demand, as a JSON object</li>
+          <li><strong>subscriptionDemand_data</strong>: The subscription demand as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A team admin sends an <strong>invitation</strong> to a user to become a new <strong>member</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to a user when a team admin invites them to become a member of their team.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-rejection-title</div>
+          <div><strong>Body</strong>: mail-user-invitation-rejection-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the team admin</li>
+          <li><strong>teamName</strong>: The name of the team</li>
+          <li><strong>user_data</strong>: The team admin as a JSON object</li>
+          <li><strong>team_data</strong>: The team as a JSON object</li>
+          <li><strong>recipient_data</strong>: The recipient of the email as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A <strong>user invitation</strong> has been <strong>rejected</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to the team admin who invited a user to their team, informing them that the invitation has been declined.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-rejection-title</div>
+          <div><strong>Body</strong>: mail-user-invitation-rejection-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the invited user</li>
+          <li><strong>teamName</strong>: The name of the team</li>
+          <li><strong>user_data</strong>: The invited user as a JSON object</li>
+          <li><strong>recipient_data</strong>: The recipient of the email as a JSON object</li>
+          <li><strong>tenant_data</strong>: The tenant/organization as a JSON object</li>
+          <li><strong>producer_team_data</strong>: The team as a JSON object</li>
+          <li><strong>notification_data</strong>: The notification as a JSON object</li>
+        </ul>
+      </details>
+    </li>
+    <li>
+      <details>
+        <summary>
+          A user has accepted an <strong>invitation</strong> to <strong>join a team</strong>
+        </summary>
+        <p>
+          <strong>This email is sent to team admins when a user accepts an invitation to join their team.</strong>
+        </p>
+        
+        <p>
+          <div><strong>Title</strong>: mail-acceptation-title</div>
+          <div><strong>Body</strong>: mail-user-invitation-acceptation-body</div>
+        </p>
+
+        <p><strong>Parameters:</strong></p>
+        <ul>
+          <li><strong>user</strong>: The name of the user who accepted the invitation</li>
+          <li><strong>teamName</strong>: The name of the team</li>
+          <li><strong>team_data</strong>: The team as a JSON object</li>
+          <li><strong>user_data</strong>: The user as a JSON object</li>
+        </ul>
+      </details>
+    </li>
 </ul>
 
 Each folder structure contains two subfolders, each with a `page.html` file.
