--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1418,5 +1418,8 @@
     "delete.plan.confirm.modal.description.2": "All API keys associated with this plan.",
     "delete.environment.confirm.modal.description.1": "Are you sure you want to delete this environment? This action is irreversible and will result in the deletion of:",
     "delete.environment.confirm.modal.description.2": "All API keys associated with this environment.",
-    "delete.item.confirm.modal.confirm.label": "Type %s to confirm deletion"
+    "delete.item.confirm.modal.confirm.label": "Type %s to confirm deletion",
+    "delete.api.confirm.modal.description.next.version": "Version %s will automatically be set as the API's current version",
+    "delete.api.confirm.modal.description.next.label": "New current version",
+    "delete.api.confirm.modal.description.next.help": "The version being deleted is the API's current version. Please select a replacement version"
 }
