--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1419,5 +1419,8 @@
   "delete.plan.confirm.modal.description.2": "Toutes les clés API associées à ce plan.",
   "delete.environment.confirm.modal.description.1": "Êtes-vous sûr de vouloir supprimer cet environnement ? Cette action est irréversible et entraînera la suppression de :",
   "delete.environment.confirm.modal.description.2": "Toutes les clés API associées à cet environnement.",
-  "delete.item.confirm.modal.confirm.label": "Saisissez %s pour confirmer la suppression"
+  "delete.item.confirm.modal.confirm.label": "Saisissez %s pour confirmer la suppression",
+  "delete.api.confirm.modal.description.next.version": "La version %s sera automatiquement définie comme la version courante de l'API",
+  "delete.api.confirm.modal.description.next.label": "Nouvelle version courante",
+  "delete.api.confirm.modal.description.next.help": "La version que vous supprimez est la version courante de l'API. Veuillez sélectionner une version pour la remplacer"
 }
