--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1421,5 +1421,7 @@
     "delete.item.confirm.modal.confirm.label": "Type %s to confirm deletion",
     "delete.api.confirm.modal.description.next.version": "Version %s will automatically be set as the API's current version",
     "delete.api.confirm.modal.description.next.label": "New current version",
-    "delete.api.confirm.modal.description.next.help": "The version being deleted is the API's current version. Please select a replacement version"
+    "delete.api.confirm.modal.description.next.help": "The version being deleted is the API's current version. Please select a replacement version",
+    "apis.list.apigroup.badge.label": "API group",
+    "apis.list.currentVersion.badge.label": "Current version"
 }
