--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1425,5 +1425,11 @@
   "delete.api.confirm.modal.description.next.help": "La version que vous supprimez est la version courante de l'API. Veuillez sélectionner une version pour la remplacer",
   "apis.list.apigroup.badge.label": "API group",
   "apis.list.currentVersion.badge.label": "Version courante",
-  "api.form.create.version.btn.aria.label": "Créer une nouvelle version de l'API"
+  "api.form.create.version.btn.aria.label": "Créer une nouvelle version de l'API",
+  "sidebar.search.button.aria.label": "Ouvrir le menu de création",
+  "sidebar.create.button.aria.label": "Ouvrir la recherche",
+  "sidebar.more.button.aria.label": "Afficher plus d'options",
+  "sidebar.messages.button.aria.label": "Ouvrir le chat avec un admin",
+  "sidebar.notifications.button.aria.label": "Ouvrir le centre de notifications",
+  "sidebar.dark.mode.button.aria.label": "Activer le mode clair/sombre"
 }
