fix front office tests

--- a/daikoku/javascript/src/locales/en/translation.json
+++ b/daikoku/javascript/src/locales/en/translation.json
@@ -1425,8 +1425,8 @@
     "apis.list.apigroup.badge.label": "API group",
     "apis.list.currentVersion.badge.label": "Current version",
     "api.form.create.version.btn.aria.label": "Create new API version",
-    "sidebar.search.button.aria.label": "Open creation menu",
-    "sidebar.create.button.aria.label": "Open search",
+    "sidebar.search.button.aria.label": "Open search",
+    "sidebar.create.button.aria.label": "Open creation menu",
     "sidebar.more.button.aria.label": "Show more options",
     "sidebar.messages.button.aria.label": "Open chat with an admin",
     "sidebar.notifications.button.aria.label": "Open notification center",
