--- a/daikoku/javascript/src/locales/fr/translation.json
+++ b/daikoku/javascript/src/locales/fr/translation.json
@@ -1426,8 +1426,8 @@
   "apis.list.apigroup.badge.label": "API group",
   "apis.list.currentVersion.badge.label": "Version courante",
   "api.form.create.version.btn.aria.label": "Créer une nouvelle version de l'API",
-  "sidebar.search.button.aria.label": "Ouvrir le menu de création",
-  "sidebar.create.button.aria.label": "Ouvrir la recherche",
+  "sidebar.search.button.aria.label": "Ouvrir la recherche",
+  "sidebar.create.button.aria.label": "Ouvrir le menu de création",
   "sidebar.more.button.aria.label": "Afficher plus d'options",
   "sidebar.messages.button.aria.label": "Ouvrir le chat avec un admin",
   "sidebar.notifications.button.aria.label": "Ouvrir le centre de notifications",
